# django-otel-cloud-trace

./: Dockerfile  README.md  devbox.json  manage.py  pyproject.toml  requirements.txt
.github/workflows/: build.yaml
mysite/: asgi.py  manage.py  opentelemetry_config.py  settings.py
mysite/mysite/: settings.py
mysite/polls/: views.py
mysite/polls/migrations/: 0001_initial.py
polls/: views.py
